# Aion

./: .env-active  .gitignore  LICENSE  README.md  brand.config.json  install-aion.sh  pyproject.toml  pyrightconfig.json
defaults/marketplace/.claude-plugin/: marketplace.json
defaults/marketplace/plugins/cli-design/: README.md
defaults/marketplace/plugins/cli-design/.claude-plugin/: plugin.json
defaults/marketplace/plugins/core-skills/: README.md
defaults/marketplace/plugins/core-skills/.claude-plugin/: plugin.json
defaults/marketplace/plugins/deployment/: README.md
defaults/marketplace/plugins/deployment/.claude-plugin/: plugin.json
defaults/marketplace/plugins/doctor/: README.md
defaults/marketplace/plugins/doctor/.claude-plugin/: plugin.json
defaults/marketplace/plugins/git-tools/: README.md
defaults/marketplace/plugins/math-olympiad/: README.md
defaults/marketplace/plugins/mcp-server-dev/: README.md
defaults/marketplace/plugins/md-management/: README.md
defaults/marketplace/plugins/observability/: README.md
defaults/marketplace/plugins/plugin-dev/: README.md
defaults/marketplace/plugins/pr-toolkit/: README.md
defaults/marketplace/plugins/security-review/: README.md
defaults/marketplace/plugins/skill-tools/: README.md
scripts/: brand_presets.json  build.py  install-defaults.sh
src/aion/: __init__.py  __main__.py  agent.py  cli.py  config.py  extra_tools.py  hooks.py  mcp.py  memory_git.py  permissions.py  tasks.py  tier2_tools.py  tier3_tools.py  tools.py
src/aion/plugins/: cli_commands.py  discovery.py  manager.py  marketplace.py  registry.py  types.py
(+51 files in other folders)
